deprecated/ingressroutes/argo-rolloute-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argo-rollouts
  annotations:
    linkerd.io/inject: enabled
    
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`rollouts.claytonc.dev`)
      kind: Rule
      middlewares:
        - name: traefik-local-whitelist@kubernetescrd
      services:
      - name: argo-rollouts-dashboard
        port: 3100
        # scheme: https
        # serversTransport: insecure-skip-verify
  tls:
    secretName: rollouts-tls
