deprecated/ingressroutes/argocd-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  annotations:
    linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.claytonc.dev`)
      kind: Rule
      services:
      - name: argocd-server
        port: 443
        scheme: https
        serversTransport: insecure-skip-verify
  tls:
    secretName: argocd-tls
