deprecated/ingressroutes/lidarr-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: lidarr
  # annotations:
  #   linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: lidarr

spec:
  entryPoints:
    - web
    - websecure

  routes:
  - match: Host(`lidarr.claytonc.dev`)
    kind: Rule
    services:
    - name: lidarr
      port: 8686
  tls:
    secretName: lidarr-tls
