deprecated/ingressroutes/linkerd-viz-routes.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: linkerd-viz
  annotations:
    linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: linkerd-viz
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`stats.claytonc.dev`)
      kind: Rule
      middlewares: 
        - name: traefik-local-whitelist@kubernetescrd
        - name: traefik-l5d-header@kubernetescrd
      services:
      - name: grafana
        port: 3000
  tls:
    secretName: grafana-tls


---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: linkerd
  namespace: linkerd-viz
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`mesh.claytonc.dev`)
      kind: Rule
      middlewares: 
        - name: traefik-local-whitelist@kubernetescrd
        - name: traefik-l5d-header@kubernetescrd
      services:
      - name: web
        port: 8084
  tls:
    secretName: linkerd-tls
