deprecated/ingressroutes/nextcloud-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.claytonc.dev`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
          passHostHeader: true
  tls:
    secretName: nextcloud-tls
