deprecated/ingressroutes/openhab-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  openhab

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openhab
  namespace: openhab
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`openhab.claytonc.dev`)
      kind: Rule
      services:
        - name: openhab
          port: 8080
  tls:
    secretName: openhab-tls
