deprecated/ingressroutes/prowlarr-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  # annotations:
  #   linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: prowlarr

spec:
  entryPoints:
    - web
    - websecure

  routes:
  - match: Host(`prowlarr.claytonc.dev`)
    kind: Rule
    services:
    - name: prowlarr
      port: 9696
  tls:
    secretName: prowlarr-tls
