deprecated/ingressroutes/radarr-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: radarr
  # annotations:
  #   linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr

spec:
  entryPoints:
    - web
    - websecure

  routes:
  - match: Host(`radarr.claytonc.dev`)
    kind: Rule
    services:
    - name: radarr
      port: 7878
  tls:
    secretName: radarr-tls
