deprecated/ingressroutes/sonarr-route.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sonarr
  # annotations:
  #   linkerd.io/inject: enabled

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr

spec:
  entryPoints:
    - web
    - websecure

  routes:
  - match: Host(`sonarr.claytonc.dev`)
    kind: Rule
    services:
    - name: sonarr
      port: 8989
  tls:
    secretName: sonarr-tls
